--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                                     <li>Rich Habits Poor Habits</li>
                                     <li>Marketting Online 4.0</li>
                                     <li>Code dạo ký sự</li>
-                                    <li>Bí mật tài chính người giàu (Tập 2)</li>
+                                    <li>Bí mật tài chính người giàu</li>
                                     <li>...</li>
                                 </ul>
                             </div>
@@ -767,10 +767,10 @@
                 <div class="col-12 col-xs-3 col-sm-3 col-md-3 col-lg-3 ">
                     <div class="infor-bottom ">
                         <h5>Thông tin</h5>
-                        <p><i class="fas fa-phone "></i> Holline:<a href=" "> 0971533092</a></p>
-                        <p><i class="fas fa-phone "></i> Holline:<a href=" "> 0902643385</a></p>
+                        <p><i class="fas fa-phone "></i> Holline:<a href=" "> 0369172647</a></p>
+                        <p><i class="fas fa-phone "></i> Holline:<a href=" "> 0971191412</a></p>
                         <p><i class="fas fa-map-marker-alt "></i> Address: Ho Chi Minh City</p>
-                        <p><i class="far fa-envelope "></i> Email: <a href="# ">ducanh06092001@gmail.com</a></p>
+                        <p><i class="far fa-envelope "></i> Email: <a href="# ">congthanh30102001@gmail.com</a></p>
                         <a href="https://www.facebook.com/BooksStore-105183984604459"><i
                                 class="fab fa-facebook fa-2x "></i></a>
                         <a href="https://mail.google.com/"><i class="fab fa-google-plus fa-2x "></i></a>
@@ -783,7 +783,7 @@
     <section class="sec-bottom " style="height: 50px;background-color:#363533; ">
         <div class="container ">
             <span>&copy;</span>
-            <span>Bản quyền thuộc về <span style="color:#ffc82e ">Nhóm Web</span></span>
+            <span>Bản quyền thuộc về <span style="color:#ffc82e ">BookStore_WEB</span></span>
         </div>
     </section>
 
@@ -805,7 +805,7 @@
                             <div class="form-group">
                                 <label class="label-control col-xs-12 col-sm-12 col-md-12 col-lg-12">User Name</label>
                                 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-                                    <input type="text" placeholder="ducanh001" class="form-control" id="txtname"
+                                    <input type="text" placeholder="zero000" class="form-control" id="txtname"
                                         onblur="testTen()"> <span id="er1">*</span>
                                 </div>
                             </div>
@@ -827,7 +827,7 @@
                                 <label class="label-control col-xs-3 col-sm-3 col-md-3 col-lg-3">Email</label>
                                 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
                                     <input type="email" id="txtemail" onblur="testmail()" class="form-control"
-                                        placeholder="ducanh06092001@gmail.com"> <span id="er4">*</span>
+                                        placeholder="congthanh30102001@gmail.com"> <span id="er4">*</span>
                                 </div>
                             </div>
                             <div class="form-group">
