--- a/product/product1.html
+++ b/product/product1.html
@@ -68,7 +68,9 @@
         <div class="container ">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand d-md-none"><img src="../images/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -82,7 +84,8 @@
                             <a class="nav-link" href="#au">About</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Products
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -113,7 +116,8 @@
     <section class="container">
         <div class="row pt-5" style="min-height: 710px;">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h1.jpeg" alt="..." style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
+                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h1.jpeg" alt="..."
+                    style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
             </div>
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
 
@@ -131,11 +135,21 @@
                 <details open>
                     <summary>Mô tả sản phẩm</summary>
                     <p>
-                        Cô đơn ơi, lại đây chơi !<br /> Từ cổ chí kim, con người ta sinh ra vốn đã một mình, có người bầu bạn thì tốt mà không có cũng chẳng sao. Ai cũng có thể tự kiếm tiền, tự lo cho bản thân, tự đứng dậy sau những vấp ngã. Buồn thì
-                        vui chơi với bạn bè, chán thì đi shopping, rảnh dỗi thì xem dăm ba bộ phim hà biết bao thú vui có thể tự mình tận hưởng, không có người yêu thì đã làm sao? Nếu cả thế giới cho ta biết có người yêu hạnh phúc thế nào, ta cũng chẳng
-                        ngần ngại gì mà cho cả thế giới biết mình cô đơn vui vẻ ra làm sao. Cô đơn hay có người kề cạnh, cũng chỉ là một trạng thái. Ai cũng có lúc này, lúc kia. Và nếu như bạn đang cô đơn, thì đừng lo, bởi tình yêu luôn khó nói. Một ngày
-                        đẹp trời nọ, rất có thể nó sẽ ập vào đời bạn mà chẳng cần lý do Tới lúc đó, bạn sẽ có cả hàng trăm việc để giải quyết, lo người yêu giận, nghĩ xem ngày kỷ niệm nên làm gì, đi hẹn hò thì ăn gì, mặc như thế nà Chắc chắn lúc đó, bạn
-                        sẽ vô cùng bối rối và vô cùng lo lắng. Nhưng đó là chuyện của tương lai, còn bây giờ, bạn là người vô cùng tự do. Trong lúc đám bạn đang mải mê nghĩ cách dỗ dành người yêu thì bạn có thể đi bất cứ đâu,...
+                        Cô đơn ơi, lại đây chơi !<br /> Từ cổ chí kim, con người ta sinh ra vốn đã một mình, có người
+                        bầu bạn thì tốt mà không có cũng chẳng sao. Ai cũng có thể tự kiếm tiền, tự lo cho bản thân, tự
+                        đứng dậy sau những vấp ngã. Buồn thì
+                        vui chơi với bạn bè, chán thì đi shopping, rảnh dỗi thì xem dăm ba bộ phim hà biết bao thú vui
+                        có thể tự mình tận hưởng, không có người yêu thì đã làm sao? Nếu cả thế giới cho ta biết có
+                        người yêu hạnh phúc thế nào, ta cũng chẳng
+                        ngần ngại gì mà cho cả thế giới biết mình cô đơn vui vẻ ra làm sao. Cô đơn hay có người kề cạnh,
+                        cũng chỉ là một trạng thái. Ai cũng có lúc này, lúc kia. Và nếu như bạn đang cô đơn, thì đừng
+                        lo, bởi tình yêu luôn khó nói. Một ngày
+                        đẹp trời nọ, rất có thể nó sẽ ập vào đời bạn mà chẳng cần lý do Tới lúc đó, bạn sẽ có cả hàng
+                        trăm việc để giải quyết, lo người yêu giận, nghĩ xem ngày kỷ niệm nên làm gì, đi hẹn hò thì ăn
+                        gì, mặc như thế nà Chắc chắn lúc đó, bạn
+                        sẽ vô cùng bối rối và vô cùng lo lắng. Nhưng đó là chuyện của tương lai, còn bây giờ, bạn là
+                        người vô cùng tự do. Trong lúc đám bạn đang mải mê nghĩ cách dỗ dành người yêu thì bạn có thể đi
+                        bất cứ đâu,...
                     </p>
                 </details>
             </div>
@@ -150,7 +164,8 @@
             <div class="row">
                 <div class="col-12 col-md-3">
                     <div class="logofooter">
-                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;" id="au"><u>About Us</u></h3>
+                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;"
+                            id="au"><u>About Us</u></h3>
                         <div class="imglogo">
                             <img src="../images/logo/logobookstore.jpg" alt=" logo ">
                         </div>
@@ -181,10 +196,10 @@
                 <div class="col-12 col-md-3 ">
                     <div class="infor-bottom ">
                         <h5>Thông tin</h5>
-                        <p><i class="fas fa-phone "></i> Holline:<a href=" "> 0971533092</a></p>
-                        <p><i class="fas fa-phone "></i> Holline:<a href=" "> 0902643385</a></p>
+                        <p><i class="fas fa-phone "></i> Holline:<a href=" "> 0369172647</a></p>
+                        <p><i class="fas fa-phone "></i> Holline:<a href=" "> 0971191412</a></p>
                         <p><i class="fas fa-map-marker-alt "></i> Address: Ho Chi Minh City</p>
-                        <p><i class="far fa-envelope "></i> Email: <a href="# ">ducanh06092001@gmail.com</a></p>
+                        <p><i class="far fa-envelope "></i> Email: <a href="# ">congthanh30102001@gmail.com</a></p>
                         <a href=" "><i class="fab fa-facebook fa-2x "></i></a>
                         <a href=" "><i class="fab fa-google-plus fa-2x "></i></a>
                         <a href=" "><i class="fab fa-twitter-square fa-2x "></i></a>
