--- a/product/product16.html
+++ b/product/product16.html
@@ -184,10 +184,10 @@
                 <div class="col-12 col-md-3 ">
                     <div class="infor-bottom ">
                         <h5>Thông tin</h5>
-                        <p><i class="fas fa-phone "></i> Holline:<a href=" "> 0971533092</a></p>
-                        <p><i class="fas fa-phone "></i> Holline:<a href=" "> 0902643385</a></p>
+                        <p><i class="fas fa-phone "></i> Holline:<a href=" "> 0369172647</a></p>
+                        <p><i class="fas fa-phone "></i> Holline:<a href=" "> 0971191412</a></p>
                         <p><i class="fas fa-map-marker-alt "></i> Address: Ho Chi Minh City</p>
-                        <p><i class="far fa-envelope "></i> Email: <a href="# ">ducanh06092001@gmail.com</a></p>
+                        <p><i class="far fa-envelope "></i> Email: <a href="# ">congthanh30102001@gmail.com</a></p>
                         <a href=" "><i class="fab fa-facebook fa-2x "></i></a>
                         <a href=" "><i class="fab fa-google-plus fa-2x "></i></a>
                         <a href=" "><i class="fab fa-twitter-square fa-2x "></i></a>
