--- a/product/cart.html
+++ b/product/cart.html
@@ -31,15 +31,15 @@
                     <div style="height: 18px;"></div>
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 header_logo">
                         <a href="index.html">
-                            <img src="image/logoBook.PNG" alt="home">
+                            <img src="../images/logo/logobookstore.jpg" alt="home">
                         </a>
                     </div>
                     <div class="header_policy col-xs-12 col-sm-12 col-md-6 col-lg-6 ">
                         <div class="col-xs-12 col-sm-4 col-md-4 col-md-4 ">
                             <i class="fas fa-truck-moving"></i>
                             <a href="vanchuyen.html">Vận chuyển miễn phí
-                        <p>Tận nơi - toàn quốc</p>
-                     </a>
+                                <p>Tận nơi - toàn quốc</p>
+                            </a>
                         </div>
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 ">
                             <i class="fas fa-calendar-alt"></i>
@@ -69,15 +69,15 @@
                 <div class="row nav_ text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <div class="menu_style dropdown col-xs-12 col-sm-4 col-md-3 col-lg-3">
                         <span class="btn btn-default dropdown-toggle " type="button" data-toggle="dropdown">
-                        <i class="fas fa-list"></i> TẤT CẢ DANH MỤC
-                        <span class="caret"></span>
+                            <i class="fas fa-list"></i> TẤT CẢ DANH MỤC
+                            <span class="caret"></span>
                         </span>
                         <ul class=" dropdown-menu submenu_style">
                             <li class="dropdown-submenu">
                                 <a class="test" tabindex="-1" href="#">
-                            Mua sách Online
-                                <span class="caret" ></span>
-                             </a>
+                                    Mua sách Online
+                                    <span class="caret"></span>
+                                </a>
                                 <ul class="dropdown-menu submenu2">
                                     <div class="submenu2 ">
                                         <ul class="">
@@ -117,15 +117,16 @@
                     <div class="row nav_content col-xs-12 col-sm-12 col-md-4 col-lg-4">
                         <span class="account_ col-xs-8 col-sm-8 col-md-8 col-lg-8">
                             <li class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                                <button type="button" class="account_login " data-toggle="modal" data-target="#myModalHorizontal">
-                                Đăng nhập
+                                <button type="button" class="account_login " data-toggle="modal"
+                                    data-target="#myModalHorizontal">
+                                    Đăng nhập
                                 </button>
                             </li>
                             <li class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><a href="#">Đăng ký</a></li>
                         </span>
                         <span class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                             <div>
-                                <a href="cart.html" >
+                                <a href="cart.html">
                                     <i class="fas fa-cart-plus"><sup id="slsanpham">0</sup></i> Giỏ hàng
                                 </a>
                             </div>
@@ -243,26 +244,34 @@
                                 <h4>THÔNG TIN KHÁCH HÀNG</h4>
                                 <form role="form" class="form-horizontal">
                                     <div class="form-group">
-                                        <label for="txtname">Họ và tên</label><span id="tbname" class="text-danger">(*)</span>
-                                        <input type="text" class="form-control" id="txtname" placeholder="David Joe" onblur="testname()">
+                                        <label for="txtname">Họ và tên</label><span id="tbname"
+                                            class="text-danger">(*)</span>
+                                        <input type="text" class="form-control" id="txtname" placeholder="David Joe"
+                                            onblur="testname()">
                                     </div>
                                     <div class="form-group">
-                                        <label for="txtname">email</label><span id="tbname" class="text-danger">(*)</span>
+                                        <label for="txtname">email</label><span id="tbname"
+                                            class="text-danger">(*)</span>
                                         <input type="email" class="form-control" id="txtemai" placeholder="">
                                     </div>
                                     <div class="form-group">
-                                        <label for="txtsdt">Số điện thoại</label><span id="tbsdt" class="text-danger">(*)</span>
-                                        <input type="text" class="form-control" id="txtsdt" placeholder="" onblur="testsdt()">
+                                        <label for="txtsdt">Số điện thoại</label><span id="tbsdt"
+                                            class="text-danger">(*)</span>
+                                        <input type="text" class="form-control" id="txtsdt" placeholder=""
+                                            onblur="testsdt()">
                                     </div>
                                     <div class="form-group">
-                                        <label for="txtdiachi">Địa chỉ giao hàng</label><span id="tbdiachi" class="text-danger">(*)</span>
-                                        <input type="text" class="form-control" id="txtdiachi" placeholder="thông tin chi tiết ( số nhà , xã/phường , quận/huyện, thành phố) ">
+                                        <label for="txtdiachi">Địa chỉ giao hàng</label><span id="tbdiachi"
+                                            class="text-danger">(*)</span>
+                                        <input type="text" class="form-control" id="txtdiachi"
+                                            placeholder="thông tin chi tiết ( số nhà , xã/phường , quận/huyện, thành phố) ">
                                     </div>
                                 </form>
                                 <div class="form_thanhtoan_chinhsach">
                                     <h4>PHƯƠNG THỨC VẬN CHUYỂN</h4>
                                     <div>
-                                        <p><i class="fas fa-check"></i> Vận chuyển trực tiếp <span class="text-danger">(Giao hàng trong 24h)</span></p>
+                                        <p><i class="fas fa-check"></i> Vận chuyển trực tiếp <span
+                                                class="text-danger">(Giao hàng trong 24h)</span></p>
                                         <p>Phí vận chuyển tính theo giá trị đơn hàng:</p>
                                         <div>
                                             <p>- Đơn hàng dưới 50.000đ phí VC: 25.000đ
@@ -280,8 +289,10 @@
                                 <div class="form_thanhtoan_chinhsach">
                                     <h4>HƯƠNG THỨC THANH TOÁN</h4>
                                     <div>
-                                        <p><i class="fas fa-check"></i> Thanh toán trực tiếp khi nhận hàng<span class="text-danger">(Miễn phí thu hộ)</span></p>
-                                        <p><i class="fas fa-check"></i> Thẻ ATM đăng ký internet Banking và Thẻ Visa quốc tế</p>
+                                        <p><i class="fas fa-check"></i> Thanh toán trực tiếp khi nhận hàng<span
+                                                class="text-danger">(Miễn phí thu hộ)</span></p>
+                                        <p><i class="fas fa-check"></i> Thẻ ATM đăng ký internet Banking và Thẻ Visa
+                                            quốc tế</p>
                                         <p><i class="fas fa-check"></i> Chuyển khoản ngân hàng
                                         </p>
                                     </div>
@@ -322,7 +333,8 @@
                     <div class="contact_adress">
                         <h4>BOOKVN</h4>
                         <p>D/C: iuh trường dh công nghiệp TP.HCM
-                            <br>Gpkd:123341120</p>
+                            <br>Gpkd:123341120
+                        </p>
                     </div>
                     <div class="contact_conact">
                         <div class="contact_conact_icon"><i class="fas fa-phone-alt"></i></div>
@@ -339,7 +351,7 @@
                         </div>
                     </div>
                     <div class="contact_from">
-                        <p>Đăng ký nhận newsletter</p>
+                        <p>Register received new book</p>
                         <form action="">
                             <input type="text" id="email_customer_newsletter" placeholder="email...">
                             <input class="contact_from_style" type="submit" value="Đăng ký ">
@@ -361,7 +373,6 @@
                         <p>
                             <a href="">Chính sách đổi trả hàng</a><br>
                             <a href="">Chính sách bảo hành </a><br>
-                            <a href="">Chính sách bồi hoàn</a><br>
                             <a href="">chính sách bảo mật</a><br>
                             <a href="">Điều khoản sử dụng</a>
                         </p>
@@ -405,15 +416,16 @@
 
 
     <!-- Modal -->
-    <div class=" modal fade " id="myModalHorizontal " tabindex="-1 " role="dialog " aria-labelledby="myModalLabel " aria-hidden="true ">
+    <div class=" modal fade " id="myModalHorizontal " tabindex="-1 " role="dialog " aria-labelledby="myModalLabel "
+        aria-hidden="true ">
         <div class="modal-dialog ">
             <div class="modal-content ">
                 <!-- Modal Header -->
                 <div class="modal-header ">
                     <button type="button " class="close " data-dismiss="modal ">
-                       <span aria-hidden="true ">&times;</span>
-                       <span class="sr-only ">Close</span>
-                </button>
+                        <span aria-hidden="true ">&times;</span>
+                        <span class="sr-only ">Close</span>
+                    </button>
                     <h3 class="modal-title " id="myModalLabel " style="color: #e0a500; margin-left: 1rem; ">
                         Book.vn
                     </h3>
@@ -424,14 +436,16 @@
                         <div class="form-group ">
                             <label class="col-sm-2 control-label " for="txttk ">Tài khoản</label>
                             <div class="col-sm-10 ">
-                                <input type="text " class="form-control " id="txttk " placeholder="Tài khoản " onblur="testtk() " />
+                                <input type="text " class="form-control " id="txttk " placeholder="Tài khoản "
+                                    onblur="testtk() " />
                             </div>
                             <span id="tbtk " class="col-sm-10 text-danger "></span>
                         </div>
                         <div class="form-group ">
                             <label class="col-sm-2 control-label " for="txtmk ">Mật khẩu</label>
                             <div class="col-sm-10 ">
-                                <input type="password " class="form-control " id="txtmk " placeholder="Mật khẩu " onblur="testmk() " />
+                                <input type="password " class="form-control " id="txtmk " placeholder="Mật khẩu "
+                                    onblur="testmk() " />
                             </div>
                             <span id="tbmk " class="col-sm-10 text-danger "></span>
                         </div>
@@ -439,8 +453,8 @@
                             <div class="col-sm-offset-2 col-sm-10 ">
                                 <div class="checkbox ">
                                     <label>
-                            <input type="checkbox "/> Nhớ mật khẩu
-                        </label>
+                                        <input type="checkbox " /> Nhớ mật khẩu
+                                    </label>
                                 </div>
                             </div>
                         </div>
