--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="fontawesome/css/all.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <!--My css-->
-    <link rel="stylesheet" href="mycss/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!--BT 4 JS-->
     <script src="bootstrap/js/jquery-3.5.1.slim.min.js"></script>
     <script src="bootstrap/js/popper.min.js"></script>
@@ -145,7 +145,7 @@
                 </div>
                 <div class="col-4 col-xs-2 col-sm-2 col-md-2 col-lg-2">
                     <div class="cart">
-                        <a class="cart" href="#">
+                        <a class="cart" href="product/cart.html">
                             <span><i class="fas fa-cart-plus"></i></span>
                         </a>
                     </div>
