--- a/product/cart.html
+++ b/product/cart.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.1">
     <title>Your Cart</title>
-    <script src="bootstrap-3.4.1-dist/jquery-3.5.1.js"></script>
-    <script src="bootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="bootstrap-3.4.1-dist/css/bootstrap.min.css">
+    <script src="../bootstrap/js/jquery-3.5.1.js"></script>
+    <script src="../bootstrap/bootstrapbootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../bootstrapbootstrap-3.4.1-dist/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="../css/base.css"> -->
-    <link rel="stylesheet" href="css/base2.css">
-    <link rel="stylesheet" href="css/slider.css">
-    <link rel="stylesheet" href="fontawesome-free-5.13.0-web/css/all.min.css">
-    <script src="js/main.js"></script>
-    <script src="js/slider.js"></script>
+    <link rel="stylesheet" href="../../css/base2.css">
+    <link rel="stylesheet" href="../css/my-my-slider.css">
+    <link rel="stylesheet" href="../fontawesome/css/all.min.css">
+    <script src="../../js/main.js"></script>
+    <script src="../js/sliders.js"></script>
     <!-- slides -->
-    <link rel="stylesheet" href="css/my-slider.css">
-    <script src="js/slides.js"></script>
-    <link rel="stylesheet" href="css/giohang.css">
-    <script src="js/giohang.js"></script>
+    <!-- <link rel="stylesheet" href="css/my-my-slider.css"> -->
+    <!-- <script src="js/slides.js"></script> -->
+    <link rel="stylesheet" href="../css/cart.css">
+    <script src="../js/cart.js"></script>
 
 
 </head>
@@ -30,20 +30,20 @@
                 <div class="row header_">
                     <div style="height: 18px;"></div>
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 header_logo">
-                        <a href="index.html">
+                        <a href="../index.html">
                             <img src="../images/logo/logobookstore.jpg" alt="home">
                         </a>
                     </div>
                     <div class="header_policy col-xs-12 col-sm-12 col-md-6 col-lg-6 ">
                         <div class="col-xs-12 col-sm-4 col-md-4 col-md-4 ">
                             <i class="fas fa-truck-moving"></i>
-                            <a href="vanchuyen.html">Vận chuyển miễn phí
+                            <a href="Delivery.html">Vận chuyển miễn phí
                                 <p>Tận nơi - toàn quốc</p>
                             </a>
                         </div>
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 ">
                             <i class="fas fa-calendar-alt"></i>
-                            <a href="doitra.html">Đổi trả hàng
+                            <a href="returnpolicy.html">Đổi trả hàng
                                 <p>Trong vòng 15 ngày</p>
                             </a>
                         </div>
@@ -59,7 +59,7 @@
                             <i class="fas fa-headset"></i>
                         </div>
                         <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 ">
-                            HOTLINE <br> 1234567890
+                            HOTLINE <br> 0369172647
                         </div>
 
                     </div>
@@ -186,23 +186,23 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><img src="image/sanpham/yeu-tham-muoi-nam-chua-dam-noi.png" alt=""></td>
+                                        <td><img src="../images/product/slider_poster_conan.jpg" alt=""></td>
                                         <td>
-                                            <p>Yêu thầm 10 năm chưa giám nói</p>
+                                            <p>Full 10 chapter Conan</p>
                                         </td>
                                         <td><input type="number" value="1" id="Ktsoluong" onblur="Ktsoluong()"></td>
                                         <td></td>
-                                        <td><span id="yeu-tham-10-nam-chua-giam-noi">116</span>.000</td>
+                                        <td><span id="slider_poster_conan">116</span>.000</td>
                                         <td>116.000</td>
                                     </tr>
                                     <tr>
-                                        <td><img src="image/sanpham/dinh-duong-xanh.png" alt=""></td>
+                                        <td><img src="../images/product/tsubasa-giac-mo-san-co-full.jpg" alt=""></td>
                                         <td>
-                                            <p>Combo 2 cuốn sách hay về dinh dưỡng</p>
+                                            <p>Tsubasa Full 12 chapter </p>
                                         </td>
                                         <td><input type="number" value="1" id="Ktsoluong1" onblur="Ktsoluong()"></td>
                                         <td></td>
-                                        <td><span id="dinh-duong-xanh">132</span>.000</td>
+                                        <td><span id="Tsubasa">132</span>.000</td>
                                         <td>132.000</td>
                                     </tr>
                                 </tbody>
@@ -331,29 +331,29 @@
             <div class="footer_title">
                 <div class="contact col-xs-12 col-sm-12 col-md-3 col-lg-3 ">
                     <div class="contact_adress">
-                        <h4>BOOKVN</h4>
-                        <p>D/C: iuh trường dh công nghiệp TP.HCM
-                            <br>Gpkd:123341120
-                        </p>
+                        <h3>BookStore_WEB</h3>
+                        <h4>D/C: Industrial University of Ho Chi Minh City
+
+                        </h4>
                     </div>
                     <div class="contact_conact">
                         <div class="contact_conact_icon"><i class="fas fa-phone-alt"></i></div>
                         <div>
-                            HOTLINE <br>
-                            <h4>0123456789</h4>
+                            &nbsp;HOTLINE <br>
+                            <h5>0369172647</h5>
                         </div>
                     </div>
                     <div class="contact_conact">
                         <div class="contact_conact_icon"><i class="fas fa-envelope"></i></div>
                         <div>
-                            EMAIL <br>
-                            <h4>congthanh30102001@gmail.com</h4>
+                            &nbsp;EMAIL <br>
+                            <h5>congthanh30102001@gmail.com</h5>
                         </div>
                     </div>
                     <div class="contact_from">
                         <p>Register received new book</p>
                         <form action="">
-                            <input type="text" id="email_customer_newsletter" placeholder="email...">
+                            <input type="text" id="email_customer_newsletter" placeholder="Enter your email">
                             <input class="contact_from_style" type="submit" value="Đăng ký ">
                         </form>
                     </div>
@@ -390,22 +390,22 @@
                 </div>
                 <div class="contact_follow col-xs-12 col-sm-12 col-md-4 col-lg-4 ">
                     <h4>Kết nối với chúng tôi</h4>
-                    <a href="#"><img src="image/iconSSS/facebook.PNG" alt=""></a>
-                    <a href="#"><img src="image/iconSSS/youtube.PNG" alt=""></a><br>
-                    <a href="#"><img src="image/iconSSS/zalo.PNG" alt=""></a>
+                    <a href="#"><img src="../images/icon/facebook.PNG" alt=""></a>
+                    <a href="#"><img src="../images/icon/youtube.PNG" alt=""></a><br>
+                    <a href="#"><img src="../images/icon/zalo.PNG" alt=""></a>
                 </div>
             </div>
             <div class="line_spacing-x"></div>
             <div class="footer_copyr">
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <p>&copy; </p>
-                    <p>from: PIBOOK.VN</p>
+                    <p>&copy; Ung Cong Thanh - 19493021 </p>
+                    <p>from: BookStore_WEB</p>
                 </div>
                 <div class="col-xs-8 col-sm-8 col-md-4 col-lg-4">
-                    <a href="#"><img src="image/iconSSS/visa.png" alt=""></a>
-                    <a href="#"><img src="image/iconSSS/mastercard.png" alt=""></a>
-                    <a href="#"><img src="image/iconSSS/netbanking.png" alt=""></a>
-                    <a href="#"><img src="image/iconSSS/tiền mặt.png" alt=""></a>
+                    <a href="#"><img src="../images/icon/visa.png" alt=""></a>
+                    <a href="#"><img src="../images/icon/mastercard.png" alt=""></a>
+                    <a href="#"><img src="../images/icon/netbanking.png" alt=""></a>
+                    <a href="#"><img src="../images/icon/cash.png" alt=""></a>
                 </div>
             </div>
         </footer>
@@ -427,7 +427,7 @@
                         <span class="sr-only ">Close</span>
                     </button>
                     <h3 class="modal-title " id="myModalLabel " style="color: #e0a500; margin-left: 1rem; ">
-                        Book.vn
+                        BookStore_WEB
                     </h3>
                 </div>
                 <!-- Modal Body -->
