--- a/product/returnpolicy.html
+++ b/product/returnpolicy.html
@@ -7,10 +7,10 @@
     <title>Chính sách đổi trả</title>
     <script src="../bootstrap/js/jquery-3.5.1.js"></script>
     <script src="../bootstrap/bootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../bootstrap/bootstrap-3.4.1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap/bootstrap/bootstrap-3.4.1-dist/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="../css/base.css"> -->
     <link rel="stylesheet" href="../css/base2.css">
-    <link rel="stylesheet" href="../css/my-my-slider.css">
+    <link rel="stylesheet" href="../css/my-slider.css">
     <link rel="stylesheet" href="../css/returnpolicy.css">
     <link rel="stylesheet" href="../fontawesome/css/all.min.css">
     <script src="../js/main.js"></script>
