--- a/product/thanhtoan.html
+++ b/product/thanhtoan.html
@@ -7,7 +7,7 @@
     <title>Chính sách thanh toán</title>
     <script src="bootstrap-3.4.1-dist/jquery-3.5.1.js"></script>
     <script src="bootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="bootstrap-3.4.1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap/bootstrap-3.4.1-dist/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="../css/base.css"> -->
     <link rel="stylesheet" href="css/base2.css">
     <link rel="stylesheet" href="css/slider.css">
