--- a/product/Delivery.html
+++ b/product/Delivery.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.1">
     <title>Chính sách vận chuyển</title>
-    <script src=".../bootstrap/js/jquery-3.5.1.js"></script>
+    <script src="../bootstrap/js/jquery-3.5.1.js"></script>
     <script src="../bootstrap/bootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../bootstrap/bootstrap-3.4.1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap/bootstrap/bootstrap-3.4.1-dist/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="../css/base.css"> -->
     <link rel="stylesheet" href="../css/base2.css">
     <link rel="stylesheet" href="../css/my-slider.css">
@@ -15,9 +15,7 @@
     <link rel="stylesheet" href="../fontawesome/css/all.min.css">
     <script src="../js/main.js"></script>
     <script src="../js/sliders.js"></script>
-    <!-- slides -->
-    <link rel="stylesheet" href="../css/my-my-slider.css">
-    <script src="../js/sliders.js"></script>
+
 
 
 </head>
