--- a/product/cart.html
+++ b/product/cart.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.1">
     <title>Your Cart</title>
     <script src="../bootstrap/js/jquery-3.5.1.js"></script>
-    <script src="../bootstrap/bootstrapbootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../bootstrapbootstrap-3.4.1-dist/css/bootstrap.min.css">
+    <script src="../bootstrap/bootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../bootstrap/bootstrap-3.4.1-dist/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="../css/base.css"> -->
-    <link rel="stylesheet" href="../../css/base2.css">
-    <link rel="stylesheet" href="../css/my-my-slider.css">
+    <link rel="stylesheet" href="../css/base2.css">
+    <link rel="stylesheet" href="../css/my-slider.css">
     <link rel="stylesheet" href="../fontawesome/css/all.min.css">
-    <script src="../../js/main.js"></script>
+    <script src="../js/main.js"></script>
     <script src="../js/sliders.js"></script>
     <!-- slides -->
-    <!-- <link rel="stylesheet" href="css/my-my-slider.css"> -->
+    <!-- <link rel="stylesheet" href="css/my-slider.css"> -->
     <!-- <script src="js/slides.js"></script> -->
     <link rel="stylesheet" href="../css/cart.css">
     <script src="../js/cart.js"></script>
